--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -11,7 +11,7 @@ body{
 }
 
 /* Layout */
-.wrap{max-width: 1400px; display: table; width:100%; height: 100%; min-height: 700px;}
+.wrap{max-width: 1400px; min-width: 1280px; display: table; width:100%; height: 100%; min-height: 700px;}
 .wrap_login{display: table; background: url('../../assets/images/nh_background.jpg') no-repeat; background-size:100% 50%; width:100%; height: 100%; position: relative;}
 .wrap_main{min-width: 1500px; display: table; background: #f8f4f3; width:100%; height: 100%; min-height: 700px; position: relative;}
 header{display: table-row; width: 100%; height: 60px; background: #F4F4F4;}
