--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -18,7 +18,7 @@ header{display: table-row; width: 100%; height: 60px; background: #F4F4F4;}
 nav{margin: 0 auto; text-align: center;}
 section{display: table-row; height: 100%;}
 footer{display: table-row;}
-.container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0;}
+.container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; clear: both;}
 .container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 2px solid #006EB6;}
 .container_main{width: 100%; height: 100%; position: relative; padding-left: 50px;}
 .container_login{display: table-row;}
