--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -14,13 +14,13 @@ body{
 }
 
 /* Layout */
-.wrap{max-width: 1400px; min-width: 1280px; display: table; width:100%; height: 100%; min-height: 700px;}
+.wrap{ display: table; width:100%; height: 100%; min-height: 700px;}
 .wrap_login{display: table; background: url('../../assets/images/nh_background.jpg') no-repeat; background-size:100% 50%; width:100%; height: 100%; position: relative;}
 .wrap_main{min-width: 1500px; display: table; background: #f8f4f3; width:100%; height: 100%; min-height: 700px; position: relative;}
-header{display: table-row; width: 100%; height: 60px; background: #F4F4F4;}
+header{max-width: 1400px; min-width: 1280px; display: table-row; width: 100%; height: 60px; background: #F4F4F4;}
 nav{margin: 0 auto; text-align: center;}
-section{display: table-row; height: 100%;}
-footer{display: table-row;}
+section{max-width: 1400px; min-width: 1280px; display: table-row; height: 100%;}
+footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; clear: both;}
 .container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 2px solid #006EB6;}
 .container_main{width: 100%; height: 100%; position: relative; padding-left: 50px;}
@@ -134,9 +134,10 @@ footer{display: table-row;}
 
 /* left menu */
 .lnb{float: left; background:#F8F8F8; height:100%; width: 290px; border-right: 1px solid #e7e5e1; padding:0 20px;}
-.lnb h3{font-size: 20px; font-weight: 500; height: 40px; color: #222;}
-.lnb .menu_list{border-top: 2px solid #ccc; overflow-y: auto; max-height: 550px;}
+.lnb h3{font-size: 20px; font-weight: 500; height: 40px; color: #222; font-family: S-CoreDream-6Bold; }
+.lnb .menu_list{border-top: 2px solid #f98425; overflow-y: auto; max-height: 550px;}
 .lnb .menu_list a{color: #222;}
+.lnb .menu_list .fas {color: #000 !important; font-size: 17px; padding: 6px 6px; align-content: center; text-align: center; width: 20px;height: 20px; background: #f98425;border-radius: 50%;display: inline-block;}
 .lnb .menu_list > li > a{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > ul > li > a{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
@@ -182,9 +183,9 @@ footer{display: table-row;}
 .btn_poplist li{padding: 5px 0;}
 .btn_poplist li button{width: 110px;}
 
-.user_info{border-top: 2px solid #ccc; width: 100%;}
-.user_info tr{border-bottom: 1px solid #eee;}
-.user_info td,.user_info th{height: 55px; padding: 0 10px; text-align: left;}
+.user_info{border-top: 1px solid #006EB6; width: 100%;}
+.user_info tr{border-bottom: 2px solid #006EB6;}
+.user_info td,.user_info th{height: 55px; padding: 17px 12px; text-align: left;}
 .user_info th{background: #40C8F4; font-weight: 700;}
 .user_info td{color: #222;}
 .user_info td .user_name{font-size: 18px; margin-top: 8px;}
@@ -192,7 +193,7 @@ footer{display: table-row;}
 
 
 .left_area2{width: 320px; float: left; height: 100%;}
-.left_box2{border-top: 2px solid #ccc; border-bottom: 1px solid #ddd; padding: 10px 2px 10px 0px; background: #fff; height: 100%; overflow-y: auto; max-height: 500px;}
+.left_box2{ padding: 10px 2px 10px 0px; background: #fff; height: 100%; overflow-y: auto; max-height: 500px;}
 .left_box2 h4{font-size: 18px; color: #333; padding: 15px 0; border-bottom: 1px solid #beb9b4;}
 .left_list2{height: 100%;}
 .left_list2 li{border-bottom: 1px solid #efeeeb;}
@@ -309,7 +310,7 @@ footer{display: table-row;}
 .btn_area button:hover{background: #006EB6; color: #fff;}
 
 /*****footer_copyright*****/
-.footer_area{display: table; width: 100%; padding: 0 50px; height: 80px; line-height: 80px; background: #f4f4f4; border-top: 1px solid #e7e5e1;}
+.footer_area{display: table; width: 100%; padding: 0 50px; height: 80px; line-height: 80px; background: #f4f4f4; border-top: 2px solid #006EB6;}
 .footer_area .footer_copy{display: table-cell; width: 50%; color: #777;}
 .footer_area .footer_link{display: table-cell; width: 50%; text-align: right;}
 .footer_area .footer_link a{display: inline-block; margin-left: 10px; padding-right: 23px; font-weight: bold; color: #777; background: url("../../assets/images/btn_popup.png") no-repeat right center;}
@@ -318,7 +319,8 @@ footer{display: table-row;}
 
 
 /** common **/
-.btn_new{font-size: 15px; font-weight: 500; color: #111111; height: 32px; padding: 0 20px; border-radius: 2px; background: #eeeeee; border:1px solid #dddddd;}
+.btn_new{font-size: 15px; font-weight: 500; color: #ffffff; height: 32px; padding: 0 20px; border-radius:4px; background: #eeeeee; border:1px solid #dddddd; background: #006EB6;
+border-bottom: 1px solid #023556; border-right: 1px solid #023556;}
 .btn_new:hover{background: #006EB6; color: #fff;}
 .version{width: 156px;}
 .magin_t45{margin-top: 45px;}
