--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -144,11 +144,12 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .lnb .menu_list{border-top: 2px solid #f98425; overflow-y: auto; max-height: 550px; font-size: 16px;}
 .lnb .menu_list a{color: #222;}
 .lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 6px 6px; align-content: center; text-align: center; width: 20px;height: 20px; background: #ffffff;border-radius: 50%;display: inline-block;}
-.lnb .menu_list > li > a{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
+.lnb .menu_list ul > li { height: 52px; }
+.lnb .menu_list > li > a{display: block; line-height: 52px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
-.lnb .menu_list > li > ul > li > a{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
+.lnb .menu_list > li > ul > li > a{display: block; line-height: 50px; border-bottom: 2px solid #e7e7e6; padding-left: 35px; background: 17px center;}
 .lnb .menu_list > li > ul > li > a:hover{display: block; text-decoration: underline; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
-.lnb .menu_list > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#fff; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #006EB6 17px center; cursor: default; font-weight: bold;}
+.lnb .menu_list > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#222; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #86bcdf 17px center; cursor: default; }
 
 .lnb .menu_list2{border-top: 2px solid #1898D2;}
 .lnb .menu_list2 a{color: #222;}
@@ -156,11 +157,11 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .lnb .menu_list2 > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
 .lnb .menu_list2 > li > ul > li > a{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
 .lnb .menu_list2 > li > ul > li > a:hover{display: block; text-decoration: underline; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
-.lnb .menu_list2 > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#fff; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #006EB6 17px center; cursor: default; font-weight: bold;}
+.lnb .menu_list2 > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#222; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #006EB6 17px center; cursor: default; font-weight: bold;}
 
 /* contents */
 .content{float: right; width: calc( 100% - 290px ); margin: 45px 0 0 0; padding-left: 50px;}
-.content h3{font-size: 20px; font-weight: 500; height: 40px; color: #222;}
+.content h3{font-family: 'S-CoreDream-6Bold'; font-size: 20px; font-weight: 500; height: 40px; color: #222;}
 .grid_top{position: relative;}
 .grid_top .fas {
 	color: #006EB6 !important;
@@ -343,11 +344,11 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .btn_new{    
 	font-size: 15px;
     font-weight: 500;
-    color: #1898D2;
+    color: #006EB6;
     height: 32px;
     padding: 0 20px;
     border-radius: 4px;
-    background: #eee;
+    background: #d6e4ed;
     border: 1px solid #ddd;}
 .btn_new:hover{background: #006EB6; color: #fff;}
 .version{width: 156px;}
