--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -17,12 +17,12 @@ body{
 .wrap{ display: table; width:100%; height: 100%; min-height: 700px;}
 .wrap_login{display: table; background: url('../../assets/images/nh_background.jpg') no-repeat; background-size:100% 50%; width:100%; height: 100%; position: relative;}
 .wrap_main{min-width: 1500px; display: table; background: #f8f4f3; width:100%; height: 100%; min-height: 700px; position: relative;}
-header{max-width: 1400px; min-width: 1280px; display: table-row; width: 100%; height: 60px; background: #F4F4F4;}
+header{max-width: 1400px; min-width: 1280px; display: table-row; width: 100%; height: 70px; background: #F4F4F4;}
 nav{margin: 0 auto; text-align: center;}
 section{max-width: 1400px; min-width: 1280px; display: table-row; height: 100%;}
 footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; clear: both;}
-.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 2px solid #006EB6;}
+.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 1px solid #006EB6;border-top: 5px solid #f98425;}
 .container_main{width: 100%; height: 100%; position: relative; padding-left: 50px;}
 .container_login{display: table-row;}
 .userheader{display: table-row; width: 100%; height: 60px; background: #006EB6;}}
@@ -118,7 +118,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .footer_copyright{text-align: center; color: #777777; font-size: 13px; padding: 20px 0;}
 
 /* header */
-.img_logo{position: absolute; left: 50px; top: 0;}
+.img_logo{position: absolute; left: 50px; top: 3px;}
 .img_logo a h1{line-height: 60px; width: 160px; background: url('../../assets/images/nhnonghyup.png') no-repeat center; background-size:99% 99%; text-indent: -9999px;}
 .user{position: absolute; right: 50px; top: 20px; color: #1898D2;}
 .user em{margin-left: 5px; font-weight: bold;}
@@ -143,7 +143,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .lnb h3{font-size: 20px; font-weight: 500; height: 40px; color: #222; font-family: S-CoreDream-6Bold; }
 .lnb .menu_list{border-top: 2px solid #f98425; overflow-y: auto; max-height: 550px; font-size: 16px;}
 .lnb .menu_list a{color: #222;}
-.lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 6px 6px; align-content: center; text-align: center; width: 20px;height: 20px; background: #ffffff;border-radius: 50%;display: inline-block;}
+.lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 6px 6px; align-content: center; text-align: center; width: 20px;height: 20px; background: #ffffff;border-radius: 50%;display: inline-block;border: 1px solid #f87425;}
 .lnb .menu_list ul > li { height: 52px; }
 .lnb .menu_list > li > a{display: block; line-height: 52px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
