--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -22,7 +22,7 @@ nav{margin: 0 auto; text-align: center;}
 section{max-width: 1400px; min-width: 1280px; display: table-row; height: 100%;}
 footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; clear: both;}
-.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 1px solid #006EB6;border-top: 5px solid #f98425;}
+.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 1px solid #006EB6;border-top: 5px solid #f98425; box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);}
 .container_main{width: 100%; height: 100%; position: relative; padding-left: 50px;}
 .container_login{display: table-row;}
 .userheader{display: table-row; width: 100%; height: 60px; background: #006EB6;}}
@@ -143,13 +143,13 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .lnb h3{font-size: 20px; font-weight: 500; height: 40px; color: #222; font-family: S-CoreDream-6Bold; }
 .lnb .menu_list{border-top: 2px solid #f98425; overflow-y: auto; max-height: 550px; font-size: 16px;}
 .lnb .menu_list a{color: #222;}
-.lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 8px 6px 6px 6px;; align-content: center; text-align: center; width: 20px;height: 20px; background: #ffffff;border-radius: 50%;display: inline-block;border: 1px solid #f87425;}
+.lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 8px 6px 6px 6px;; align-content: center; text-align: center; width: 20px;height: 20px; background: #f2f2f2;border-radius: 50%;display: inline-block;}
 .lnb .menu_list ul > li { height: 52px; }
 .lnb .menu_list > li > a{display: block; line-height: 52px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > ul > li > a{display: block; line-height: 50px; border-bottom: 2px solid #e7e7e6; padding-left: 35px; background: 17px center;}
 .lnb .menu_list > li > ul > li > a:hover{display: block; text-decoration: underline; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: 17px center;}
-.lnb .menu_list > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#222; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #86bcdf 17px center; cursor: default; }
+.lnb .menu_list > li > ul > li > .on, .lnb .menu_list > li > ul > li > .on:hover{display: block; color:#fff; line-height: 50px; text-decoration: none; border-bottom: 1px solid #e7e7e6; padding-left: 35px; background: #006EB6 17px center; cursor: default; }
 
 .lnb .menu_list2{border-top: 2px solid #1898D2;}
 .lnb .menu_list2 a{color: #222;}
