--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -22,7 +22,7 @@ nav{margin: 0 auto; text-align: center;}
 section{max-width: 1400px; min-width: 1280px; display: table-row; height: 100%;}
 footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .container{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; clear: both;}
-.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 1px solid #006EB6;border-top: 5px solid #f98425; box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);}
+.container_header{width: 100%; height: 100%; position: relative; padding: 0 50px 0 0; border-bottom: 1px solid #006EB6;border-top: 5px solid #004cb6; background: #fefff0;box-shadow: 1px 1px 1px rgba(0, 0, 0, .1);}
 .container_main{width: 100%; height: 100%; position: relative; padding-left: 50px;}
 .container_login{display: table-row;}
 .userheader{display: table-row; width: 100%; height: 60px; background: #006EB6;}}
@@ -112,7 +112,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .fa-lock {
 	color: #fff !important;
     font-size: 14px;
-    background: #f98425 !important;
+    background: #004cb6;
     padding: 5px;
     border-radius: 50%;}
 .footer_copyright{text-align: center; color: #777777; font-size: 13px; padding: 20px 0;}
@@ -141,9 +141,9 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 /* left menu */
 .lnb{float: left; background: #d6e4ed; min-height:877px; width: 290px; border-right: 1px solid #e7e5e1; padding:0 20px;}
 .lnb h3{font-size: 20px; font-weight: 500; height: 40px; color: #222; font-family: S-CoreDream-6Bold; }
-.lnb .menu_list{border-top: 2px solid #f98425; overflow-y: auto; max-height: 550px; font-size: 16px;}
+.lnb .menu_list{ border-top: 2px solid #004cb6; overflow-y: auto; max-height: 550px; font-size: 16px;}
 .lnb .menu_list a{color: #222;}
-.lnb .menu_list .fas {color: #f98425 !important; font-size: 17px; padding: 8px 6px 6px 6px;; align-content: center; text-align: center; width: 20px;height: 20px; background: #f2f2f2;border-radius: 50%;display: inline-block;}
+.lnb .menu_list .fas {color: #004cb6; font-size: 17px; padding: 8px 6px 6px 6px;; align-content: center; text-align: center; width: 20px;height: 20px; background: #fefff0;border-radius: 50%;display: inline-block;}
 .lnb .menu_list ul > li { height: 52px; }
 .lnb .menu_list > li > a{display: block; line-height: 52px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_list.png") no-repeat 97% 50%;}
 .lnb .menu_list > li > .on{display: block; line-height: 50px; border-bottom: 1px solid #e7e7e6; padding-left: 10px; background: url("../../assets/images/btn_LF_listOn.png") no-repeat 97% 50%;}
@@ -164,7 +164,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .content h3{font-family: 'S-CoreDream-6Bold'; font-size: 20px; font-weight: 500; height: 40px; color: #222;}
 .grid_top{position: relative;}
 .grid_top .fas {
-	color: #f98425 !important;
+	color: #004cb6;
     margin-right: 7px; }
 .list_sch{position: absolute; right: 0; top: 0;}
 .sch_area{position: relative;}
