--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -17,7 +17,7 @@ body{
 .wrap{ display: table; width:100%; height: 100%; min-height: 700px;}
 .wrap_login{display: table; background: url('../../assets/images/nh_background.jpg') no-repeat; background-size:100% 50%; width:100%; height: 100%; position: relative;}
 .wrap_main{min-width: 1500px; display: table; background: #f8f4f3; width:100%; height: 100%; min-height: 700px; position: relative;}
-header{max-width: 1400px; min-width: 1280px; display: table-row; width: 100%; height: 70px; background: #F4F4F4;}
+header{max-width: 1400px; min-width: 1280px; display: table-row; width: 100%; height: 77px; background: #F4F4F4;}
 nav{margin: 0 auto; text-align: center;}
 section{max-width: 1400px; min-width: 1280px; display: table-row; height: 100%;}
 footer{max-width: 1400px; min-width: 1280px; display: table-row;}
@@ -110,15 +110,16 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 	box-shadow: 3px 3px 3px 3px gray;
 }
 .fa-lock {
-	color: #fff !important;
-    font-size: 14px;
+    color: #fff !important;
+    font-size: 17px;
     background: #004cb6;
-    padding: 5px;
-    border-radius: 50%;}
+    padding: 8px;
+    margin-left: 7px;
+}
 .footer_copyright{text-align: center; color: #777777; font-size: 13px; padding: 20px 0;}
 
 /* header */
-.img_logo{position: absolute; left: 50px; top: 3px;}
+.img_logo{position: absolute; left: 50px; top: 7px;}
 .img_logo a h1{line-height: 60px; width: 160px; background: url('../../assets/images/nhnonghyup.png') no-repeat center; background-size:99% 99%; text-indent: -9999px;}
 .user{position: absolute; right: 50px; top: 20px; color: #1898D2;}
 .user em{margin-left: 5px; font-weight: bold;}
@@ -304,7 +305,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .popup_layer{position: fixed; left: 0; top: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, .6); z-index: 999;}
 .popup_box{display: table; position: absolute; left: 50%; top: 50%; margin: -310px 0 0 -310px; background: #fff; width: 620px; height: 600px;}
 .popup_top{display: table-row; background: #006EB6; height: 60px; line-height: 60px;}
-.popup_top h1{font-size: 22px; font-weight: 500; color: #fff; padding: 0 20px; border-bottom: 2px solid #f98425 !important;}
+.popup_top h1{font-size: 22px; font-weight: 500; color: #fff; padding: 0 20px; box-shadow: 2px 2px 3px rgba(0, 0, 0, .2);}
 .popup_content{display: table-row;}
 .content-box{padding: 20px; overflow-y: auto; height: 480px;}
 .content-box h2{font-size: 18px; line-height: 30px;}
@@ -317,7 +318,7 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .popup_btn{display: table-row; height: 40px;}
 .btn_area{text-align: right; padding: 10px 20px 0 20px;}
 .popup_tbl .btn_area {padding: 0px 0px 0px 10px !important;}
-.popup_tbl .btn_area button { background: #f98425 !important; height: 35px;}
+.popup_tbl .btn_area button { background: #1898D2 !important; height: 35px;}
 .btn_area button {
     padding: 0 40px;
     margin-bottom: 20px;
