--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -202,6 +202,10 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .user_info td .user_name{font-size: 18px; margin-top: 8px;}
 .user_info td .user_name em{font-size: 14px;}
 
+/*approval*/
+.approvalTh.user_info .user_info td, .user_info th{
+	padding: 7px 2px;
+}
 
 .left_area2{width: 320px; float: left; height: 100%;}
 .left_box2{ padding: 10px 2px 10px 0px; background: #fff; height: 100%; overflow-y: auto; max-height: 500px;}
