--- a/WebContent/resources/assets/css/design.css
+++ b/WebContent/resources/assets/css/design.css
@@ -201,11 +201,11 @@ footer{max-width: 1400px; min-width: 1280px; display: table-row;}
 .user_info td{color: #222;}
 .user_info td .user_name{font-size: 18px; margin-top: 8px;}
 .user_info td .user_name em{font-size: 14px;}
-
 /*approval*/
 .approvalTh .user_info td{
-	padding: 7px 2px;
+	padding: 7px 2px !important;
 }
+
 
 .left_area2{width: 320px; float: left; height: 100%;}
 .left_box2{ padding: 10px 2px 10px 0px; background: #fff; height: 100%; overflow-y: auto; max-height: 500px;}
